// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FakeUser reducers fakeUserReducer Should handle INIT 1`] = `
Array [
  Object {
    "error": null,
    "loading": true,
    "user": null,
  },
  Object {
    "args": Array [
      "userA",
    ],
    "failActionCreator": [Function],
    "func": [Function],
    "simulate": [Function],
    "successActionCreator": [Function],
    "type": "RUN",
    Symbol(isCmd): true,
  },
]
`;

exports[`FakeUser reducers fakeUserReducer Should handle USER_FETCH_FAIL 1`] = `
Object {
  "error": "dummyError",
  "loading": false,
  "user": null,
}
`;

exports[`FakeUser reducers fakeUserReducer Should handle USER_FETCH_SUCCESS 1`] = `
Object {
  "error": null,
  "loading": false,
  "user": "dummyUser",
}
`;
